Updated the Latin translation.

--- a/po/wesnoth-l/la.po
+++ b/po/wesnoth-l/la.po
@@ -535,7 +535,7 @@ msgstr "Centurionem Vesnotiensem Tarvenium interficere"
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:127
 msgid "Look, riders approach."
-msgstr "Ecces equites."
+msgstr "Ecce, equites."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:131
@@ -548,7 +548,7 @@ msgid ""
 "By order of the Queen, the magistrate of this town is ordered to travel with "
 "us to Elensefar for vetting."
 msgstr ""
-"Reginae iussu, magister huius oppidi nobiscum Ellensepharen ire iubetur ut "
+"Magister, Reginae iussu, huius oppidi nobiscum Ellensepharen ire iubetur ut "
 "scrutetur."
 
 #. [message]: speaker=Harper
@@ -631,7 +631,7 @@ msgid ""
 msgstr ""
 "Bene est. Ad Delvynum eos consultum ibimus. Numquam putaram patriam ad "
 "tenebras adire. Iam non solum orces nobis minantur, sed nescioquid sinistrum "
-"accidit ut Regina regnum capiat.  "
+"accidit ut Regina regnum capiat."
 
 # forsitan + indic because he's normal
 #. [message]: speaker=Baldras
@@ -782,7 +782,7 @@ msgid ""
 "We need evidence. Hard evidence... but wait— Are those orcish war drums I "
 "hear?"
 msgstr ""
-"Indicia dare necesse est, atque gravia... io— belline tympana orcium audio?  "
+"Indicia dare necesse est, atque gravia... io— belline tympana orcium audio?"
 
 #. [message]: speaker=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:214
@@ -791,13 +791,13 @@ msgid ""
 "tale; saurians approach. To arms!"
 msgstr ""
 "Puto te vera dicere, aequalis. Et fetor in aura rem aliam designat; lacertas "
-"appropinquare. Ad arma!   "
+"appropinquare. Ad arma!"
 
 #. [message]: speaker=Urk Delek
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:222
 msgid ""
 "By the sound of the wolves, the scent trail of Fal Khag’s killers ends here."
-msgstr "Vestigia interfectorum Falcagi, luporum sonitu, hic abeunt. "
+msgstr "Vestigiis interfectorum Falcagi, luporum sonitu, hic abeunt."
 
 #. [message]: speaker=Thhsthss
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:228
@@ -1013,7 +1013,7 @@ msgid ""
 "adversaries of Baldras and his allies..."
 msgstr ""
 "Horribilis, sole occidente, permutatio hostes humanos Baldradis sociorumque "
-"percipiebat... "
+"percipiebat..."
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:557
@@ -1050,7 +1050,7 @@ msgstr ""
 "Damnati sumus, olim a Regulo Eldredio imperati, filius Regis atque proditor. "
 "Stipendium maiestatis est ista vita funesta. Nescimus quis aut quid sic nos "
 "destatus est, sed fortasse mors corporea tantum initium paenitentia fatalis "
-"erit. "
+"erit."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:597
@@ -1129,7 +1129,7 @@ msgstr "Quentin"
 #. [side]: type=Rogue, id=Hans
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:87
 msgid "Hans"
-msgstr "Han"
+msgstr "Hans"
 
 #. [objective]: condition=win
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:122
@@ -1180,7 +1180,7 @@ msgid ""
 "heavy infantry arrived three days ago and took over the patrols."
 msgstr ""
 "Vos inventum veni. Nobis per oppidum clam ire necesse est. Milites meos "
-"persequi solent, sed manui ferratorum tres dies praefuit."
+"persequi solent, sed manus ferratorum tres dies praefuit."
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:524
@@ -1195,6 +1195,10 @@ msgid ""
 "into the forest; look for the signpost. My brother Hans is waiting for you "
 "there and will take you to our master. Try to avoid the soldiers if you can."
 msgstr ""
+"Bene igitur evenit me primum te invenire. Age, festina, praeter urbem ad "
+"Silvam Lividam ire necesse est. Est parva semita inter meridiem et orientem "
+"quae in silvam ducit; signum ligneum quaerere. Hans, frater meus, ibi te "
+"exspectat atque te ad dominum nostrum ducet. Cave milites vites, si potis."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:566
@@ -1202,6 +1206,8 @@ msgid ""
 "Looks like these guards hold stationary posts, so if we’re careful enough we "
 "should be able to slip our way around them unnoticed."
 msgstr ""
+"Hi custodes loca immobiles tenere viduntur. Itaque si satis cavemus clam "
+"illos praeterire possumus."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:570
@@ -1210,6 +1216,9 @@ msgid ""
 "and try to find a way for us to get past the guards, but make sure to not "
 "stay where they can see you or we’re all in big trouble..."
 msgstr ""
+"Harper, vos iuniores alacresque oculis nobis esse debent. Exporate et "
+"quaremini viam qua custodes vitare possumus, sed cavete non ubi vos videre "
+"possunt manere ne nos ruamus..."
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:658
@@ -1219,7 +1228,7 @@ msgstr "Nos viderunt! <i>Currite</i>!"
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:675
 msgid "Fall back, quickly! Maybe we can yet lose them!"
-msgstr ""
+msgstr "Se recipite, agite! Forsitan etiam eos evitemus!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:691
@@ -1227,12 +1236,14 @@ msgid ""
 "Gentlemen, please come this way and follow the path into the forest. Our "
 "leader is anxious to meet you."
 msgstr ""
+"Vires, amabo, hic agite, sequimini semitam in silvam. Dux mostrum vos videre "
+"cupit."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:695
 msgid ""
 "As soon as we escape the Wesnoth death squad, we will be happy to oblige."
-msgstr ""
+msgstr "Simul ac nos turbam mortis Vesnotiensem fugerimus, nobis placebunt."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:699
@@ -1241,23 +1252,25 @@ msgid ""
 "heavily guarded city relying on nothing but the cover of darkness and my "
 "wits, I would say you were crazy."
 msgstr ""
+"Ego tantum sat diu non cucurri. Si me roges ut intra moenia ipsa oppidi "
+"nihilo quam tenebris et astu correpam, te vesanum putam."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:703
 msgid "As it turns out, I’m the crazy one. Let’s finish this folly."
-msgstr ""
+msgstr "At ego vesanus. Delirationem haec perficiamus."
 
 #. [message]: speaker=Hans
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:728
 msgid ""
 "You can come if you wish, but the leader is only interested in speaking to "
 "Baldras."
-msgstr "Venias si vis, sed dux tantum cum Baldrade loqui vult."
+msgstr "Veni si vis, sed dux tantum cum Baldrade loqui vult."
 
 #. [message]: speaker=Hans
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:748
 msgid "Fly, and we may yet evade them in the Grey Woods."
-msgstr ""
+msgstr "Fugite, fortasse nos eos in Silva Livida fallemus."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:753
@@ -1272,6 +1285,8 @@ msgid ""
 "Dallben. Our mission is unfinished, but we must return to fight a suicide "
 "battle."
 msgstr ""
+"Nimis temporis hic perdidimus. Nonne copiae Reginae ad Dalbenum redierunt. "
+"Finis imperfecta est, pugnatum perituri redire necesse est."
 
 #. [scenario]: id=06_The_Grey_Woods
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:4
@@ -1317,11 +1332,15 @@ msgid ""
 "attack a caravan head-on. It’s not noble work, but our pursuits require "
 "plenty of gold."
 msgstr ""
+"Helicromus sum, ac tu non tam fallax esse debes. Periculosos vires duco. "
+"Satelles mei invisi quemque urbem adire possumus, hominem per somno "
+"spoliare, vel commeatum proruere. Non dignum est, sed copiis auri studiis "
+"nostris opus est."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:233
 msgid "Your pursuits?"
-msgstr ""
+msgstr "Studiisne vestris"
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:237
