Updated the Ukrainian translation.

--- a/po/wesnoth-tutorial/uk.po
+++ b/po/wesnoth-tutorial/uk.po
@@ -712,7 +712,7 @@ msgid ""
 "</i> so they can gain levels and become more powerful."
 msgstr ""
 "Не забувайте відводити поранених бійців до сіл і, якщо потрібно, вербувати "
-"нових. Особливо піклуйтесь про бійців з високим <i>рівнем досвіду (XP)</i>, "
+"нових. Особливо піклуйтесь про бійців з високим <i>рівнем досвіду (ДВ)</i>, "
 "вони можуть скоро отримати наступний рівень і стати сильнішими."
 
 #. [message]: speaker=narrator
@@ -765,7 +765,7 @@ msgid ""
 "has a 70% chance of hitting no matter what terrain its target occupies."
 msgstr ""
 "Кожний раз, коли один з ваших бійців вибраний, ви побачите змінювані "
-"відсотки при русі курсора миші на мапі. Чим вище відсоток, тим більший "
+"відсотки при русі курсора миші на карті. Чим вище відсоток, тим більший "
 "<i>захист</i> бійця в обраній місцевості. Наприклад, більшість бійців мають "
 "гарний захист в замках і селах, та погану оборону в річках. Проте, ці стовпи "
 "використовують <i>магічну</i> атаку, яка завжди має 70% шанс потрапляння "
