--- a/po/wesnoth-editor/uk.po
+++ b/po/wesnoth-editor/uk.po
@@ -4,22 +4,22 @@
 # This file is distributed under the same license as the PACKAGE package.
 # Automatically generated, 2012.
 #
+# Igor Paliychuk <mansonigor@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-04-27 13:15+0300\n"
+"Last-Translator: Igor Paliychuk <mansonigor@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  wesnoth-editor.cpp.pot (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  wesnoth-editor.wml.pot (PACKAGE VERSION)  #-#-#-#-#\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Virtaal 0.7.1\n"
 
 #. [brush]
 #: data/core/editor/brushes.cfg:5
@@ -123,7 +123,7 @@ msgid ""
 msgstr ""
 "Використовуйте ліву/праву кнопку миші, щоб малювати передній/задній "
 "ландшафт. Тримайте Shift щоб малювати лише на базовому шарі. Ctrl+клік "
-"вибирає ландшаф, по якому ви клікнете."
+"вибирає ландшафт, по якому ви клікнете."
 
 #. [editor_tool_hint]: id=editor-tool-select
 #. [menu]: id=select_button_editor
@@ -144,9 +144,9 @@ msgid ""
 "scroll to the starting position, alt+number sets respective starting "
 "position under cursor, delete clears."
 msgstr ""
-"Лівий клік мишою щоб обрати гравця, правий клік мишою, щоб стерти. Цифрові "
-"клавіші переміщують до початкових позицій, Alt+цифрова клавиша встановлює "
-"відповідну початкову позицію під курсором, Delete стирає."
+"Лівий клік мишою показує вибір гравця, правий клік знімає вибір. Клавіші "
+"цифер переміщують до початкових позицій, Alt+цифра встановлює відповідну "
+"початкову позицію під курсором, Delete очищує."
 
 #. [editor_tool_hint]: id=editor-paste
 #: data/core/editor/tool-hints.cfg:30
@@ -154,9 +154,9 @@ msgid ""
 "Click to paste, zoom out for more accuracy when pasting large areas. Use the "
 "edit menu to transform the clipboard (rotate, mirror)."
 msgstr ""
-"Клацніть мишою для вставки, зменшуйте великі області перед вставкою, для "
-"більшоїточності. Використовуйте меню «Редагування» для того, щоб змінити "
-"(повернути,  відобразити) вміст буферу обміну."
+"Клацніть мишою для вставки, зменшуйте області перед вставкою великих "
+"об'єктів для більшої точності. Використовуйте меню Редагування для того, для "
+"зміни буферу обміну (повернути, відобразити)."
 
 #. [menu]: id=menu-editor-file
 #: data/themes/editor.cfg:122
@@ -185,11 +185,11 @@ msgstr "села"
 
 #: src/editor/editor_controller.cpp:132
 msgid "Quit Editor"
-msgstr "Вихід з редактора"
+msgstr "Вийти з редактора"
 
 #: src/editor/editor_controller.cpp:286
 msgid "Fatal error"
-msgstr "Фатальна помилка"
+msgstr "Критична помилка"
 
 #: src/editor/editor_controller.cpp:311 src/editor/editor_controller.cpp:1098
 msgid "(New Map)"
@@ -213,7 +213,7 @@ msgid ""
 "since the last save will be lost:"
 msgstr ""
 "Ви точно хочете вийти? Наступні карти були змінені, і всі зміни, внесені "
-"післяостаннього їх збереження будуть втрачені:"
+"після останнього їх збереження будуть втрачені:"
 
 #: src/editor/editor_controller.cpp:326
 msgid "Quit"
@@ -252,7 +252,7 @@ msgstr "Генератора випадкових карт не знайдено
 
 #: src/editor/editor_controller.cpp:501 src/editor/editor_controller.cpp:505
 msgid "Map creation failed."
-msgstr "Невдалося створити карту."
+msgstr "Не вдалося створити карту."
 
 #: src/editor/editor_controller.cpp:520
 msgid "Choose a Mask to Apply"
@@ -300,7 +300,7 @@ msgstr "Скасувати"
 
 #: src/editor/editor_controller.cpp:1130
 msgid "Can’t Undo"
-msgstr "Неможу cкасувати"
+msgstr "Не можу cкасувати"
 
 #: src/editor/editor_controller.cpp:1134
 msgid "Redo"
@@ -308,7 +308,7 @@ msgstr "Повторити"
 
 #: src/editor/editor_controller.cpp:1136
 msgid "Can’t Redo"
-msgstr "Неможу повторити"
+msgstr "Не можу повторити"
 
 #: src/editor/editor_controller.cpp:1141
 msgid "Auto-update Terrain Transitions: Yes"
@@ -336,15 +336,15 @@ msgstr "(не базові)"
 
 #: src/editor/editor_palettes.cpp:504
 msgid "Will not work in game without extra care."
-msgstr "Просто так в грі не буде працювати"
+msgstr "Просто так в грі не буде працювати."
 
 #: src/editor/editor_palettes.cpp:532
 msgid "FG: "
-msgstr "ПП:"
+msgstr "Клр:"
 
 #: src/editor/editor_palettes.cpp:533
 msgid "BG: "
-msgstr "Фон"
+msgstr "Тло:"
 
 #: src/editor/map_context.cpp:71
 msgid "File not found"
